[gd_scene load_steps=6 format=3 uid="uid://yyi3vbsnaw88"]

[ext_resource type="Script" path="res://Pipes/pipes.gd" id="1_pjm1n"]
[ext_resource type="PackedScene" uid="uid://cft2iylibnxjn" path="res://Laser/laser.tscn" id="1_rvyoc"]
[ext_resource type="PackedScene" uid="uid://4vl82b0m2hwv" path="res://Pipe/pipe.tscn" id="2_mxhho"]
[ext_resource type="AudioStream" uid="uid://bbyx8ye8c4uiu" path="res://assets/audio/ScoringSound.mp3" id="4_7xy52"]
[ext_resource type="AudioStream" uid="uid://bf6rotqkfce78" path="res://assets/audio/score.wav" id="4_hcaj4"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_pjm1n")

[node name="Laser" parent="." instance=ExtResource("1_rvyoc")]

[node name="UpperPipe" parent="." instance=ExtResource("2_mxhho")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="LowerPipe" parent="." instance=ExtResource("2_mxhho")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(95, 0)

[node name="ZurnaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7xy52")

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hcaj4")

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="UpperPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="LowerPipe" to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
